# csplice

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: Doxyfile
src/: main.c
src/builder/: json_compilation_database.c  json_compilation_database.h
src/function/: __init__.c  __init__.h  dirname.c  openfile.c  readfile.c  splitlines.c  splitwhitespaces.c  writefile.c
src/pass/: __init__.c  __init__.h
src/utils/: codenode.c  codenode.h  defines.h  json.c  json.h  log.c  log.h  luaext.c  luaext.h  openfile.c  openfile.h  readfile.c  readfile.h  splicetree.c  splicetree.h  str.c  str.h  strerror.c  strerror.h
